# rust_iceberg

./: Cargo.toml  README.md
src/: file_catalog.rs  file_io.rs  fileio.rs  iceberg_table.rs  main.rs
test_dbs/correct_0p/data/: .00000-0-d7e4cb10-49ed-4bcf-8137-bf9ccb8c6a48-00001.parquet.crc  .00000-10-760833fd-0b20-4743-9d10-f981ff950568-00001.parquet.crc  .00000-11-74c558a7-352d-4942-b4e0-fa642e7116ab-00001.parquet.crc  .00000-12-f3a4c55e-bdcf-48f8-be29-2fc2a8563691-00001.parquet.crc  .00000-13-7ba269d1-99ef-4795-9357-c76b5c34574d-00001.parquet.crc  .00000-14-7b272f89-dd70-42bd-9768-7faa7d035adf-00001.parquet.crc  .00000-18-3197d3d7-4ead-4177-ab5f-aa7bace571c9-00001.parquet.crc  .00000-19-d6864dd9-5489-4ba1-8cf9-c5176e05aed4-00001.parquet.crc  .00000-20-7c5103be-83b4-4da7-810a-52ef7382075b-00001.parquet.crc  .00000-21-0d5213fa-1ace-4478-ba72-2ecd903e6cd2-00001.parquet.crc  .00000-22-88e0091d-28a2-4b32-a412-b2a0beb720c0-00001.parquet.crc  .00000-23-3b2b9f43-b169-4193-a83d-1b0e8a6c2f53-00001.parquet.crc  .00000-24-09b4117a-68f3-40c5-8b26-a55044a1ef0b-00001.parquet.crc  .00000-25-7879d3f5-478f-419e-b7fd-25cc04dcba3a-00001.parquet.crc  .00000-26-dbe95069-1d1c-4ece-a109-8277e1d2240d-00001.parquet.crc  .00000-27-b5e72d38-d9aa-436c-9cfe-628206b4e95b-00001.parquet.crc  .00000-31-b585a68b-04ca-4981-b53a-798bf5dc5f90-00001.parquet.crc  .00000-32-c7cb570a-b1c3-4194-99f4-2622417cbc50-00001.parquet.crc  .00000-33-f4916583-7d66-40ec-85bd-47e6c86c6f2c-00001.parquet.crc  .00000-5-48750517-c5f9-4c89-9663-bbaf4437be1e-00001.parquet.crc  (+28 more)
(+585 files in other folders)
