[package]
name = "iceberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
datafusion = { version = "7.0.0", features = ["avro"] }
arrow = "9"
tokio = { version = "1", features = ["full"] }
avro-rs = "0.13"
futures = "0.3"
async-trait = "0.1"
